tests/invalid_scir_h/invalid_nondeterministic_storage.scirh
module invalid.nondeterministic_storage
import sym z python:z
import sym a python:a

fn ping -> int !write,await,write
  return 0
